--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  max-width: 100vw;
-}
+/* removed empty html, body rule set */
 
 /* Общие стили для страницы */
 body {
